--- a/C++/PingPong/Makefile.win
+++ b/C++/PingPong/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o gameplay.o bat.o otherFunction.o ball.o
-LINKOBJ  = main.o gameplay.o bat.o otherFunction.o ball.o
+OBJ      = main.o ball.o bat.o gameplay.o otherFunction.o
+LINKOBJ  = main.o ball.o bat.o gameplay.o otherFunction.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -27,14 +27,14 @@ $(BIN): $(OBJ)
 main.o: main.cpp
 	$(CPP) -c main.cpp -o main.o $(CXXFLAGS)
 
-gameplay.o: gameplay.cpp
-	$(CPP) -c gameplay.cpp -o gameplay.o $(CXXFLAGS)
+ball.o: ball.cpp
+	$(CPP) -c ball.cpp -o ball.o $(CXXFLAGS)
 
 bat.o: bat.cpp
 	$(CPP) -c bat.cpp -o bat.o $(CXXFLAGS)
 
+gameplay.o: gameplay.cpp
+	$(CPP) -c gameplay.cpp -o gameplay.o $(CXXFLAGS)
+
 otherFunction.o: otherFunction.cpp
 	$(CPP) -c otherFunction.cpp -o otherFunction.o $(CXXFLAGS)
-
-ball.o: ball.cpp
-	$(CPP) -c ball.cpp -o ball.o $(CXXFLAGS)
